// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyControlBar should accept button options correctly 1`] = `
<Component
  className="default-test-class"
  controlButtons={
    Array [
      Object {
        "ariaLabel": "test-zoom-in-aria-label",
        "callback": [MockFunction],
        "disabled": false,
        "hidden": false,
        "icon": <span>
          test zoom in
        </span>,
        "id": "zoom-in",
        "tooltip": "test zoom in tooltip",
      },
      Object {
        "ariaLabel": "Zoom Out",
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": <SearchMinusIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "zoom-out",
        "tooltip": "Zoom Out",
      },
      Object {
        "ariaLabel": "Fit to Screen",
        "callback": null,
        "disabled": false,
        "hidden": true,
        "icon": <ExpandArrowsAltIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "fit-to-screen",
        "tooltip": "Fit to Screen",
      },
      Object {
        "ariaLabel": "Reset View",
        "callback": null,
        "disabled": true,
        "hidden": false,
        "icon": <ExpandIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "reset-view",
        "tooltip": "Reset View",
      },
    ]
  }
  id="default-test-id"
>
  <Toolbar
    className="default-test-class"
    id="default-test-id"
  >
    <div
      className="pf-l-toolbar default-test-class"
      id="default-test-id"
    >
      <ToolbarGroup>
        <div
          className="pf-l-toolbar__group"
        >
          <ToolbarItem
            key="zoom-in"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="test zoom in tooltip"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        test zoom in tooltip
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="zoom-in"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <span>
                              test zoom in
                            </span>,
                            <span
                              className="sr-only"
                            >
                              test-zoom-in-aria-label
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "zoom-in",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="zoom-in"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="zoom-in"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <span>
                            test zoom in
                          </span>
                          <span
                            className="sr-only"
                          >
                            test-zoom-in-aria-label
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            test zoom in tooltip
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          test zoom in tooltip
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="zoom-out"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Zoom Out"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Zoom Out
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="zoom-out"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <SearchMinusIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Zoom Out
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "zoom-out",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="zoom-out"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="zoom-out"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <SearchMinusIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M304 192v32c0 6.6-5.4 12-12 12H124c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z"
                                transform=""
                              />
                            </svg>
                          </SearchMinusIcon>
                          <span
                            className="sr-only"
                          >
                            Zoom Out
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Zoom Out
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Zoom Out
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="reset-view"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Reset View"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Reset View
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={true}
                    className="pf-topology-control-bar__button pf-m-disabled"
                    disabled={true}
                    id="reset-view"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": true,
                          "children": Array [
                            <ExpandIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Reset View
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button pf-m-disabled",
                          "disabled": true,
                          "id": "reset-view",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={true}
                        className="pf-topology-control-bar__button pf-m-disabled"
                        disabled={true}
                        id="reset-view"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button pf-m-disabled"
                          disabled={false}
                          id="reset-view"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <ExpandIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M0 180V56c0-13.3 10.7-24 24-24h124c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H64v84c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12zM288 44v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12V56c0-13.3-10.7-24-24-24H300c-6.6 0-12 5.4-12 12zm148 276h-40c-6.6 0-12 5.4-12 12v84h-84c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24V332c0-6.6-5.4-12-12-12zM160 468v-40c0-6.6-5.4-12-12-12H64v-84c0-6.6-5.4-12-12-12H12c-6.6 0-12 5.4-12 12v124c0 13.3 10.7 24 24 24h124c6.6 0 12-5.4 12-12z"
                                transform=""
                              />
                            </svg>
                          </ExpandIcon>
                          <span
                            className="sr-only"
                          >
                            Reset View
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Reset View
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Reset View
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
        </div>
      </ToolbarGroup>
    </div>
  </Toolbar>
</Component>
`;

exports[`TopologyControlBar should display the default controls correctly 1`] = `
<Component
  className="default-test-class"
  controlButtons={
    Array [
      Object {
        "ariaLabel": "Zoom In",
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": <SearchPlusIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "zoom-in",
        "tooltip": "Zoom In",
      },
      Object {
        "ariaLabel": "Zoom Out",
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": <SearchMinusIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "zoom-out",
        "tooltip": "Zoom Out",
      },
      Object {
        "ariaLabel": "Fit to Screen",
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": <ExpandArrowsAltIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "fit-to-screen",
        "tooltip": "Fit to Screen",
      },
      Object {
        "ariaLabel": "Reset View",
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": <ExpandIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        />,
        "id": "reset-view",
        "tooltip": "Reset View",
      },
      Object {
        "ariaLabel": null,
        "callback": null,
        "disabled": false,
        "hidden": false,
        "icon": "Legend",
        "id": "legend",
        "tooltip": "",
      },
    ]
  }
  id="default-test-id"
  onButtonClick={[MockFunction]}
>
  <Toolbar
    className="default-test-class"
    id="default-test-id"
  >
    <div
      className="pf-l-toolbar default-test-class"
      id="default-test-id"
    >
      <ToolbarGroup>
        <div
          className="pf-l-toolbar__group"
        >
          <ToolbarItem
            key="zoom-in"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Zoom In"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Zoom In
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="zoom-in"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <SearchPlusIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Zoom In
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "zoom-in",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="zoom-in"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="zoom-in"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <SearchPlusIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z"
                                transform=""
                              />
                            </svg>
                          </SearchPlusIcon>
                          <span
                            className="sr-only"
                          >
                            Zoom In
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Zoom In
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Zoom In
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="zoom-out"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Zoom Out"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Zoom Out
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="zoom-out"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <SearchMinusIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Zoom Out
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "zoom-out",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="zoom-out"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="zoom-out"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <SearchMinusIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M304 192v32c0 6.6-5.4 12-12 12H124c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z"
                                transform=""
                              />
                            </svg>
                          </SearchMinusIcon>
                          <span
                            className="sr-only"
                          >
                            Zoom Out
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Zoom Out
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Zoom Out
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="fit-to-screen"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Fit to Screen"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Fit to Screen
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="fit-to-screen"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <ExpandArrowsAltIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Fit to Screen
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "fit-to-screen",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="fit-to-screen"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="fit-to-screen"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <ExpandArrowsAltIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M448 344v112a23.94 23.94 0 0 1-24 24H312c-21.39 0-32.09-25.9-17-41l36.2-36.2L224 295.6 116.77 402.9 153 439c15.09 15.1 4.39 41-17 41H24a23.94 23.94 0 0 1-24-24V344c0-21.4 25.89-32.1 41-17l36.19 36.2L184.46 256 77.18 148.7 41 185c-15.1 15.1-41 4.4-41-17V56a23.94 23.94 0 0 1 24-24h112c21.39 0 32.09 25.9 17 41l-36.2 36.2L224 216.4l107.23-107.3L295 73c-15.09-15.1-4.39-41 17-41h112a23.94 23.94 0 0 1 24 24v112c0 21.4-25.89 32.1-41 17l-36.19-36.2L263.54 256l107.28 107.3L407 327.1c15.1-15.2 41-4.5 41 16.9z"
                                transform=""
                              />
                            </svg>
                          </ExpandArrowsAltIcon>
                          <span
                            className="sr-only"
                          >
                            Fit to Screen
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Fit to Screen
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Fit to Screen
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="reset-view"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Tooltip
                appendTo={[Function]}
                aria="describedby"
                boundary="window"
                className=""
                content="Reset View"
                distance={15}
                enableFlip={true}
                entryDelay={500}
                exitDelay={500}
                flipBehavior={
                  Array [
                    "top",
                    "right",
                    "bottom",
                    "left",
                    "top",
                    "right",
                    "bottom",
                  ]
                }
                id=""
                isAppLauncher={false}
                isContentLeftAligned={false}
                isVisible={false}
                maxWidth="18.75rem"
                position="top"
                tippyProps={Object {}}
                trigger="mouseenter focus"
                zIndex={9999}
              >
                <PopoverBase
                  animateFill={false}
                  appendTo={[Function]}
                  aria="describedby"
                  arrow={true}
                  boundary="window"
                  content={
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        Reset View
                      </TooltipContent>
                    </div>
                  }
                  delay={
                    Array [
                      500,
                      500,
                    ]
                  }
                  distance={15}
                  flip={true}
                  flipBehavior={
                    Array [
                      "top",
                      "right",
                      "bottom",
                      "left",
                      "top",
                      "right",
                      "bottom",
                    ]
                  }
                  isVisible={false}
                  lazy={true}
                  maxWidth="18.75rem"
                  onCreate={[Function]}
                  performance={true}
                  placement="top"
                  popperOptions={
                    Object {
                      "modifiers": Object {
                        "hide": Object {
                          "enabled": true,
                        },
                        "preventOverflow": Object {
                          "enabled": true,
                        },
                      },
                    }
                  }
                  theme="pf-tooltip"
                  trigger="mouseenter focus"
                  zIndex={9999}
                >
                  <Component
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="reset-view"
                    onClick={[Function]}
                    variant="tertiary"
                  >
                    <ComponentWithOuia
                      component={[Function]}
                      componentProps={
                        Object {
                          "aria-disabled": false,
                          "children": Array [
                            <ExpandIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                              title={null}
                            />,
                            <span
                              className="sr-only"
                            >
                              Reset View
                            </span>,
                          ],
                          "className": "pf-topology-control-bar__button",
                          "disabled": false,
                          "id": "reset-view",
                          "onClick": [Function],
                          "variant": "tertiary",
                        }
                      }
                      consumerContext={null}
                    >
                      <Button
                        aria-disabled={false}
                        className="pf-topology-control-bar__button"
                        disabled={false}
                        id="reset-view"
                        onClick={[Function]}
                        ouiaContext={
                          Object {
                            "isOuia": false,
                            "ouiaId": null,
                          }
                        }
                        variant="tertiary"
                      >
                        <button
                          aria-disabled={null}
                          aria-label={null}
                          className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                          disabled={false}
                          id="reset-view"
                          onClick={[Function]}
                          tabIndex={null}
                          type="button"
                        >
                          <ExpandIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                            title={null}
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.125em",
                                }
                              }
                              viewBox="0 0 448 512"
                              width="1em"
                            >
                              <path
                                d="M0 180V56c0-13.3 10.7-24 24-24h124c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H64v84c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12zM288 44v40c0 6.6 5.4 12 12 12h84v84c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12V56c0-13.3-10.7-24-24-24H300c-6.6 0-12 5.4-12 12zm148 276h-40c-6.6 0-12 5.4-12 12v84h-84c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h124c13.3 0 24-10.7 24-24V332c0-6.6-5.4-12-12-12zM160 468v-40c0-6.6-5.4-12-12-12H64v-84c0-6.6-5.4-12-12-12H12c-6.6 0-12 5.4-12 12v124c0 13.3 10.7 24 24 24h124c6.6 0 12-5.4 12-12z"
                                transform=""
                              />
                            </svg>
                          </ExpandIcon>
                          <span
                            className="sr-only"
                          >
                            Reset View
                          </span>
                        </button>
                      </Button>
                    </ComponentWithOuia>
                  </Component>
                  <Portal
                    containerInfo={
                      <div>
                        <div
                          class=""
                          id=""
                          role="tooltip"
                        >
                          <div
                            class="pf-c-tooltip__content"
                          >
                            Reset View
                          </div>
                        </div>
                      </div>
                    }
                  >
                    <div
                      className=""
                      id=""
                      role="tooltip"
                    >
                      <TooltipContent
                        isLeftAligned={false}
                      >
                        <div
                          className="pf-c-tooltip__content"
                        >
                          Reset View
                        </div>
                      </TooltipContent>
                    </div>
                  </Portal>
                </PopoverBase>
              </Tooltip>
            </div>
          </ToolbarItem>
          <ToolbarItem
            key="legend"
          >
            <div
              className="pf-l-toolbar__item"
            >
              <Component
                aria-disabled={false}
                className="pf-topology-control-bar__button"
                disabled={false}
                id="legend"
                onClick={[Function]}
                variant="tertiary"
              >
                <ComponentWithOuia
                  component={[Function]}
                  componentProps={
                    Object {
                      "aria-disabled": false,
                      "children": Array [
                        "Legend",
                        "",
                      ],
                      "className": "pf-topology-control-bar__button",
                      "disabled": false,
                      "id": "legend",
                      "onClick": [Function],
                      "variant": "tertiary",
                    }
                  }
                  consumerContext={null}
                >
                  <Button
                    aria-disabled={false}
                    className="pf-topology-control-bar__button"
                    disabled={false}
                    id="legend"
                    onClick={[Function]}
                    ouiaContext={
                      Object {
                        "isOuia": false,
                        "ouiaId": null,
                      }
                    }
                    variant="tertiary"
                  >
                    <button
                      aria-disabled={null}
                      aria-label={null}
                      className="pf-c-button pf-m-tertiary pf-topology-control-bar__button"
                      disabled={false}
                      id="legend"
                      onClick={[Function]}
                      tabIndex={null}
                      type="button"
                    >
                      Legend
                    </button>
                  </Button>
                </ComponentWithOuia>
              </Component>
            </div>
          </ToolbarItem>
        </div>
      </ToolbarGroup>
    </div>
  </Toolbar>
</Component>
`;
